hc/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: liron-project
  namespace: health-check
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  ingressClassName: nginx
  rules: 
  - host: hello.lirman.cloud
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: liron-project
            port:
              name: http
